--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -2,6 +2,13 @@
 
 ## Background
 
+There has been much prior work that has applied survival analysis to baseball, much of it related to predicting career length. [Witnauer, Rogers, and Onge][Witnauer] studied the career length of baseball players with respect to their age at the start of their career and what decade they played in. [Smith and Christensen][Smith] assessed psychological skills in minor league players and found that they were predictive of current performance and later survival in major league baseball. Besides published research, many others have carried out their own statistical analyses of baseball. The relationship between career length and batting / throwing hand were examined in a [blog post by Micah Melling][Melling] using Kaplan Meier curves and a Cox proportional hazards model. He found that switch hitters had a much higher survival curve than other hitters, and left-handed hitters had slightly higher survival than right-handed hitters. In another interesting analysis, Scott Spencer studied [how long a starting pitcher lasts in a game][Spencer] and looked at performance factors such as runs and baserunners allowed.
+
+[Witnauer]: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3184466/
+[Smith]: https://journals.humankinetics.com/view/journals/jsep/17/4/article-p399.xml
+[Melling]: https://www.baseballdatascience.com/survival-analysis-how-long-do-careers-last/
+[Spencer]: https://ssp3nc3r.github.io/post/visual-exploration-of-starting-pitcher-duration/
+
 ## Data Sources
 
 The data set we used for our analysis combined two data sets, one containing information on MLB drafts and another containing information on player debuts. The draft data set has data on drafts between 1965-2019 and can be found [here on GitHub](https://github.com/double-dose-larry/baseball_draft_data) . This data itself was compiled from the [MLB Data API](https://appac.github.io/mlb-data-api-docs/). The debuts data set lists players debuts between 2005-2019 and was manually put together using data from [Baseball Reference](https://www.baseball-reference.com/).
