Add exploration section

--- a/02-exploration.Rmd
+++ b/02-exploration.Rmd
@@ -1,1 +1,59 @@
 # Exploratory Data Analysis {#exploration}
+
+Before we build any models or perform any survival analysis, we will briefly explore the data set. For this part of the project, we'll mostly look at the subset of players who were drafted from 2000 to 2010 in order to allow sufficient time for players to debut.
+
+```{r, include=FALSE}
+library(ggplot2)
+library(dplyr)
+library(readxl)
+
+draftdata <- read.csv("draft_1965_2019-2.csv") 
+debuts <- read_xlsx("2005-2019 Debuts.xlsx")
+
+# create a new data set of players drafted between 2000-2010 for some exploratory data analysis
+draftdata00to10 <- draftdata %>%
+  filter(draft_type == "JR") %>%
+  filter(year >= 2000 & year <= 2010) %>%
+  mutate(hs = grepl("\\bHS\\b", school))
+```
+
+```{r, include=FALSE}
+draftdata00to10 %>%
+  filter(milb_g == "Y") %>%  # use milb_g as a proxy for signed players
+  # the variable 'signed_sw' also exists but it is not reliable for years < 2009
+  summarize("mlb" = sum(mlb_g == "Y"), "total" = n(), "proportion" = sum(mlb_g == "Y") / n())
+
+draftdata00to10 %>%
+  filter(milb_g == "Y") %>%
+  filter(round_sort <= 2) %>%
+  group_by(round_sort) %>%
+  summarize("mlb" = sum(mlb_g == "Y"), "total" = n(), "proportion" = sum(mlb_g == "Y") / n())
+```
+
+Out of all the players who were drafted between 2000-2010 and played in the minors, only 18.8%
+reached the majors. Players drafted in the 1st round had the highest chance at 70.4%, and players drafted in the 2nd round had the second highest chance at 52.7%. The following bar graph shows in detail the proportion of players who reach the majors by round.
+
+```{r}
+# Proportion that reach MLB by round number, drafted between 2000-2010
+draftdata00to10 %>%
+  ggplot(aes(x = round_sort, fill = mlb_g)) +
+  geom_bar(position = "fill", alpha = 0.9) +
+  labs(x = "Draft Round", y = "Proportion", title = "Proportion of Drafted Players that Debut (2000-2010)", fill = "MLB")
+```
+
+```{r, include=FALSE}
+draftdata00to10 %>%
+  summarize(sum(hs) / n())
+```
+
+Next we'll investigate what proportion of players are drafted out of high school vs college by round. Overall, 32.3% of drafted players are drafted out of high school. The bar graph below shows what proportion of players are drafted from high school vs college by round. Interestingly, we see that the proportion of players drafted out of high school decreases and then increases, with the highest levels in rounds 40-50.
+
+```{r}
+draftdata00to10 %>%
+  ggplot(aes(x = round_sort, fill = hs)) +
+  geom_bar(position = "fill") +
+  labs(x = "Draft Round", y = "Proportion", title = "Proportion of Players Drafted from High School / College") +
+ scale_fill_discrete(name = "", labels = c("College", "High School"))
+```
+
+
