--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -4,6 +4,8 @@
 
 There has been much prior work that has applied survival analysis to baseball, much of it related to predicting career length. [Witnauer, Rogers, and Onge][Witnauer] studied the career length of baseball players with respect to their age at the start of their career and what decade they played in. [Smith and Christensen][Smith] assessed psychological skills in minor league players and found that they were predictive of current performance and later survival in major league baseball. Besides published research, many others have carried out their own statistical analyses of baseball. The relationship between career length and batting / throwing hand were examined in a [blog post by Micah Melling][Melling] using Kaplan Meier curves and a Cox proportional hazards model. He found that switch hitters had a much higher survival curve than other hitters, and left-handed hitters had slightly higher survival than right-handed hitters. In another interesting analysis, Scott Spencer studied [how long a starting pitcher lasts in a game][Spencer] and looked at performance factors such as runs and baserunners allowed.
 
+We did not find any previous analyses which examined time to debut of baseball players, which makes this project particularly unique and interesting.
+
 [Witnauer]: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3184466/
 [Smith]: https://journals.humankinetics.com/view/journals/jsep/17/4/article-p399.xml
 [Melling]: https://www.baseballdatascience.com/survival-analysis-how-long-do-careers-last/
