--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ site: bookdown::bookdown_site
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE)
 ```
 
 # Overview {-}
