--- a/rough_draft.Rmd
+++ b/rough_draft.Rmd
@@ -15,7 +15,6 @@ knitr::opts_chunk$set(echo = TRUE)
 library(Lahman)
 library(XML)
 library(ggplot2)
-library(plyr)
 library(tidyr)
 library(broom)
 library(tidyverse)
@@ -187,3 +186,18 @@ draftdata05to10 %>%
   geom_density()
 
 ```
+
+For players who did not debut, set their debut date to their draft date + 2964 days or the last game of the 2019 regular season, whichever comes first.
+
+```{r}
+# check that it works
+newdata %>%
+  filter(mlb_g == 0) %>%
+  mutate(Debut = pmin(draftdate + 2964, as.Date("2019-09-30")))
+
+newdata %>%
+  mutate(Debut = if_else(mlb_g == 1, Debut, pmin(draftdate + 2964, as.Date("2019-09-30")))) %>%
+  mutate(timetodebut = as.numeric(Debut - draftdate))
+
+```
+
